# gamecode-tools

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
examples/: bedrock_transform.rs  default_tools.rs  directory_list.rs  file_operations.rs  file_operations_extended.rs  file_patch.rs  format_options.rs  logging_example.rs  standard_transform.rs
src/: jsonrpc.rs  lib.rs  logging.rs  schema.rs  transform.rs
src/tools/: directory_list.rs  directory_make.rs  file_diff.rs  file_find.rs  file_grep.rs  file_move.rs  file_patch.rs  file_read.rs  file_write.rs  mod.rs  shell.rs
tests/: test_logging.rs
