[package]
name = "gamecode-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "JSONRPC-compatible tool functions for MCP applications"
repository = "https://github.com/navicore/gamecode-tools"
readme = "README.md"
keywords = ["jsonrpc", "mcp", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "fs", "process", "macros", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
chrono = "0.4"
base64 = "0.22"
diff = "0.1.13"
similar = "2.2.1"
regex = "1.11.1"
glob = "0.3.2"
walkdir = "2.4.0"
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
